[package]
name = "squirrel-tactix"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = "*"
actix-web = "4"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = "0.8"
dotenv = "0.15"
